--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,5 @@
 .header {
   background-color: #1eb7ee;
-  width: 100%;
   padding: 20px 50px;
 }
 
@@ -9,9 +8,13 @@
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 600;
+  margin-right: 50px;
 }
 
-.logo:hover {
+.nav-link {
   color: #fff;
-  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: #fff;
 }
